--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <p>This is a website<br>with <em>br</em> element</p>
 
-<p><strong>This is LAB_1.2 with new commit</strong></p>
+<p><strong>This is LAB_1.4 with new commit</strong></p>
+
+<a href="https://www.lnu.edu.ua"> Visit us! We are the best!</a>
 
 </body>
 
